[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Boxman.gd" type="Script" id=1]
[ext_resource path="res://scenes/RevolverChambers.tscn" type="PackedScene" id=2]
[ext_resource path="res://images/sprites/boxman_stand__000.png" type="Texture" id=3]
[ext_resource path="res://images/sprites/direction.png" type="Texture" id=4]
[ext_resource path="res://scenes/HealthCounter.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Boxman" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 2
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

scale = Vector2( 5.5, 9.6 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="RevolvingChambers" parent="." index="1" instance=ExtResource( 2 )]

[node name="Bullets" type="Node" parent="." index="2"]

[node name="Sprites" type="Sprite" parent="." index="3"]

editor/display_folded = true

[node name="SpriteBase" type="Sprite" parent="Sprites" index="0"]

texture = ExtResource( 3 )

[node name="IndicatorDirection" type="Sprite" parent="Sprites" index="1"]

texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="HealthCounter" parent="." index="4" instance=ExtResource( 5 )]

[node name="Raycasts" type="Node2D" parent="." index="5"]

[node name="RaycastGrounded0" type="RayCast2D" parent="." index="6"]

position = Vector2( 40, 96 )
enabled = true
exclude_parent = true
cast_to = Vector2( -80, 1 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="RaycastGrounded1" type="RayCast2D" parent="." index="7"]

position = Vector2( -40, 96 )
enabled = true
exclude_parent = true
cast_to = Vector2( 80, 1 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="RaycastJumpstop0" type="RayCast2D" parent="." index="8"]

position = Vector2( 40, -96 )
enabled = true
exclude_parent = true
cast_to = Vector2( -80, -1 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="RaycastJumpstop1" type="RayCast2D" parent="." index="9"]

position = Vector2( -40, -96 )
enabled = true
exclude_parent = true
cast_to = Vector2( 80, -1 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="RaycastWalljumpRight0" type="RayCast2D" parent="." index="10"]

position = Vector2( 55, 20 )
enabled = true
exclude_parent = true
cast_to = Vector2( 1, 76 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="RaycastWalljumpRight1" type="RayCast2D" parent="." index="11"]

position = Vector2( 55, 96 )
enabled = true
exclude_parent = true
cast_to = Vector2( 1, -76 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="RaycastWalljumpLeft0" type="RayCast2D" parent="." index="12"]

position = Vector2( -55, 20 )
enabled = true
exclude_parent = true
cast_to = Vector2( -1, 76 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="RaycastWalljumpLeft1" type="RayCast2D" parent="." index="13"]

position = Vector2( -55, 96 )
enabled = true
exclude_parent = true
cast_to = Vector2( -1, -76 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="HitboxPlayer" type="Area2D" parent="." index="14"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
collision_mask = 25
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitboxPlayer" index="0"]

scale = Vector2( 5.5, 9.6 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[connection signal="area_entered" from="HitboxPlayer" to="." method="_on_HitboxPlayer_area_entered"]


